build_log_4.txt
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_std, since `default-features` was not specified for `workspace.dependencies.fusion_std`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\tensor-sparse\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
    Checking fusion-core v0.2.0 (C:\Projects\Fusion - Programming Language\registry\crates\fusion-core)
error[E0432]: unresolved import `crate::compiler::compiler::ast`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:1:32
  |
1 | use crate::compiler::compiler::ast::*;
  |                                ^^^ could not find `ast` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::chunk`
 --> registry\crates\fusion-core\src\compiler\function.rs:1:32
  |
1 | use crate::compiler::compiler::chunk::Chunk;
  |                                ^^^^^ could not find `chunk` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::ast`
 --> registry\crates\fusion-core\src\compiler\parser.rs:1:32
  |
1 | use crate::compiler::compiler::ast::*;
  |                                ^^^ could not find `ast` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::ast`
 --> registry\crates\fusion-core\src\compiler\semantic.rs:1:32
  |
1 | use crate::compiler::compiler::ast::Type;
  |                                ^^^ could not find `ast` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::ast`
 --> registry\crates\fusion-core\src\compiler\type_checker.rs:1:32
  |
1 | use crate::compiler::compiler::ast::*;
  |                                ^^^ could not find `ast` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::ast`
 --> registry\crates\fusion-core\src\compiler\typechecker.rs:1:32
  |
1 | use crate::compiler::compiler::ast::Program;
  |                                ^^^ could not find `ast` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::chunk`
 --> registry\crates\fusion-core\src\vm.rs:1:32
  |
1 | use crate::compiler::compiler::chunk::OpCode;
  |                                ^^^^^ could not find `chunk` in `compiler`

error[E0432]: unresolved import `crate::compiler::compiler::chunk`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:2:32
  |
2 | use crate::compiler::compiler::chunk::OpCode;
  |                                ^^^^^ could not find `chunk` in `compiler`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `fusion-core` (lib) due to 8 previous errors
